add mime type and icon for pcap files